--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ClashZ</title>
-    <link rel="manifest" href="/manifest.json">
-    <link rel="stylesheet" href="/css/bulma.min.css" />
-    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="manifest" href="./manifest.json">
+    <link rel="stylesheet" href="./css/bulma.min.css" />
+    <link rel="stylesheet" href="./css/main.css" />
 </head>
 
 <body>
@@ -41,7 +41,7 @@
                     <div class="level-left">
                         <div class="level-item has-text-centered">
                             <div class="logo">
-                                <img src="/images/icons/logo-512.png" width="120px">
+                                <img src="./images/icons/logo-512.png" width="120px">
                                 <p><b>ClashZ</b></p>
                             </div>
                         </div>
@@ -237,7 +237,7 @@
         </div>
     </footer>
 
-    <script src="js/app.js"></script>
+    <script src="./js/app.js"></script>
 </body>
 
 </html>
