fix input name change

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                                     Socks Port:
                                 </div>
                                 <div class="column">
-                                    <input class="input" name="socket-port" type="number" placeholder="7891" required>
+                                    <input class="input" name="socks-port" type="number" placeholder="7891" required>
                                 </div>
                             </div>
                         </div>
